--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
     />
     <meta property="og:image" content="/logo.jpg" />
     <link rel="icon" type="image/jpg" href="/logo.jpg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Fantasai</title>
   </head>
   <body>
