--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,30 @@
       content="Bring your ideas to life with Fantasai, Create stunning, AI-generated images and share them with a vibrant community"
     />
     <meta property="og:image" content="/logo.jpg" />
+    <meta property="og:url" content="https://fantasai.vercel.app/" />
+    <meta property="og:site_name" content="Fantasai" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Fantasai An AI Image generation App" />
+    <meta
+      name="twitter:description"
+      content="Bring your ideas to life with Fantasai, Create stunning, AI-generated images and share them with a vibrant community"
+    />
+    <meta name="twitter:image" content="/logo.jpg" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Bring your ideas to life with Fantasai, Create stunning, AI-generated images and share them with a vibrant community"
+    />
+    <meta
+      name="keywords"
+      content="AI, image generation, artificial intelligence, free image generation, Fantasai"
+    />
+
     <link rel="icon" type="image/jpg" href="/logo.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
